--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "animejs": "^3.2.1",
+    "motion": "^12.23.12",
     "react": "^18.2.0",
     "react-bits": "^1.0.0",
     "react-dom": "^18.2.0",
