--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.3",
     "animejs": "^3.2.1",
+    "gsap": "^3.13.0",
     "motion": "^12.23.12",
     "react": "^18.2.0",
     "react-bits": "^1.0.0",
