--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "animejs": "^3.2.1",
     "gsap": "^3.13.0",
     "motion": "^12.23.12",
+    "ogl": "^1.0.11",
     "react": "^18.2.0",
     "react-bits": "^1.0.0",
     "react-dom": "^18.2.0",
