--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "animejs": "^3.2.1",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.8",
     "motion": "^12.23.12",
     "ogl": "^1.0.11",
     "react": "^18.2.0",
